force-app/main/default/objects/Invoice/fields/BitcoinPrice__c.field-meta.xml
<CustomField>
    <fullName>BitcoinPrice__c</fullName>
    <label>Bitcoin Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>