force-app/main/default/objects/Invoice/listViews/CustomInvoiceVisualization.listView-meta.xml
<ListView>
    <fullName>CustomInvoiceVisualization</fullName>
    <columns>BillToContact</columns>
    <columns>InvoiceDate</columns>
    <columns>DueDate</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Status__c</columns>
    <columns>Price__c</columns>
    <columns>BitcoinPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>Invoice Visualization</label>
</ListView>